MSP-5186 Add /application/create_application endpoint
