# controller/application.go
@@ -19,6 +19,7 @@ type ApplicationService interface {
 	Delete(ctx context.Context, idList []int) (int, error)
 	NextId(ctx context.Context) (int, error)
 	GetAll(ctx context.Context) ([]domain.Application, error)
+	Create(ctx context.Context, req domain.CreateApplicationRequest) (*domain.ApplicationWithTokens, error)
 }
 
 type Application struct {
@@ -117,7 +118,7 @@ func (c Application) CreateUpdate(ctx context.Context, req domain.ApplicationCre
 	case errors.Is(err, domain.ErrApplicationDuplicateName):
 		return nil, status.Errorf(codes.AlreadyExists, "application with name %s already exists", req.Name)
 	case errors.Is(err, domain.ErrApplicationNotFound):
-		return nil, status.Errorf(codes.NotFound, "Application with id %d not found", req.Id)
+		return nil, status.Errorf(codes.NotFound, "application with id %d not found", req.Id)
 	case err != nil:
 		return nil, err
 	default:
@@ -175,4 +176,31 @@ func (c Application) NextId(ctx context.Context) (int, error) {
 // @Router /application/get_all [POST]
 func (c Application) GetAll(ctx context.Context) ([]domain.Application, error) {
 	return c.service.GetAll(ctx)
+}
+
+// Create godoc
+// @Tags application
+// @Summary Создать приложение
+// @Description Если приложение с такими идентификатором или связкой `applicationGroupId`-`name` существует, то возвращает ошибку
+// @Accept  json
+// @Produce  json
+// @Param body body domain.ApplicationCreateUpdateRequest true "Объект приложения"
+// @Success 200 {object} domain.ApplicationWithTokens
+// @Failure 400 {object} domain.GrpcError
+// @Failure 404 {object} domain.GrpcError
+// @Failure 409 {object} domain.GrpcError
+// @Failure 500 {object} domain.GrpcError
+// @Router /application/create_application [POST]
+func (c Application) Create(ctx context.Context, req domain.CreateApplicationRequest) (*domain.ApplicationWithTokens, error) {
+	result, err := c.service.Create(ctx, req)
+	switch {
+	case errors.Is(err, domain.ErrAppGroupNotFound):
+		return nil, status.Errorf(codes.InvalidArgument, "application group with id %d not found", req.ApplicationGroupId)
+	case errors.Is(err, domain.ErrApplicationDuplicateName):
+		return nil, status.Errorf(codes.AlreadyExists, "application with name %s already exists", req.Name)
+	case errors.Is(err, domain.ErrApplicationDuplicateId):
+		return nil, status.Errorf(codes.AlreadyExists, "application with id %d already exists", req.Id)
+	default:
+		return result, err
+	}
 }
